Started implementing Lexer. Realised that the file input needs to be able to seek as well as read.
1 - Changed all references to io.Reader to io.ReadSeeker
2 - Updated the MockReader to MockReadSeeker and added Seek. Added tests for all functionality.

3 - Started on Lexer.next
4 - Added some state machine states (ExpectHeader, ExpectChunk, ExpectTrackEvent)
5 - Added Header(header HeaderData) to LexerCallback
6 - Added Track(header ChunkHeader) to LexerCallback

--- a/README
+++ b/README
@@ -12,14 +12,14 @@ The aim is to have full unit tests for every function and exceptional flow, to p
 
 The library is split into layers:
 
-MidiLexer takes an io.Reader and an object that conforms to MidiLexerCallback. MidiLexer is an event-based lexer, which calls methods on the callback object.
+MidiLexer takes an io.ReadSeeker and an object that conforms to MidiLexerCallback. MidiLexer is an event-based lexer, which calls methods on the callback object.
 
 MidiParser is an object that conforms to MidiLexerCallback. It takes a callback of type MidiParserCallback, and provides an extra layer of interpretation.
 
 To use this library, either write a callback that conforms to MidiLexerCallback to get the raw stream (not recommended) or a callback that conforms to MidiParserCallback (recommended).
 
-io.Reader --> MidiLexer <-- MidiLexerCallback <-- MidiParserCallback
+io.ReadSeeker --> MidiLexer <-- MidiLexerCallback <-- MidiParserCallback
 
-There is a full test suite, including mock objects for the io.Reader.
+There is a full test suite, including mock objects for the io.ReadSeeker.
 
 THIS IS A WORK IN PROGRESS, currently working on writing and testing MidiLexer.
